--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <tr>
                 <td>
                      
-                        <img width="200" src="images/image.jpg" alt="MY photo">
+                        <img width="200" src="Resume/image.jpg" alt="MY photo">
                     </td>
                     
                 <td><h1>Suraj Singh Bhadoriya</h1>
